# andi-data

./: Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
notebooks/: Romes_vers_Naf_profilage.ipynb  Typescript Kernel Test.ipynb  analyse_rome_naf_taille.ipynb  correspondance_ROME_NAF.ipynb  correspondance_rome_naf.ipynb  geocodage_entreprises.ipynb  matching_refactor.ipynb  pg_siren_export.ipynb  suggestion_metier_rome_v2.ipynb  suggestion_rome_ogr.ipynb  test.ipynb  ts_kernel_test.ipynb
ressources/: formacode_rome.csv
