[tool.poetry]
name = "andi-data"
version = "0.1.0"
description = ""
authors = ["pmontens <pieterjan@montens.net>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
PyYAML = "^5.3.1"
matplotlib = "^3.3.3"
pytz = "^2020.4"
plotly = "^4.12.0"
Unidecode = "^1.1.1"
jupyter = "^1.0.0"
psycopg2-binary = "^2.8.6"
pandas = "^1.1.4"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"
Whoosh = "^2.7.4"
python-slugify = "^4.0.1"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
